Replace portfolio HTML with cleaned layout

--- a/index.html
+++ b/index.html
@@ -1,309 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Tanaka Shumba — Cybersecurity Portfolio</title>
-  <meta name="description" content="Portfolio showcasing cybersecurity projects, hands-on demos and practical tools." />
-
-  <style>
-    /* Reset */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-
-    :root{
-      --bg: #000;
-      --card: #0e0e0e;
-      --muted: #bfbfbf;
-      --lime: #00e676; /* toned lime */
-      --lime-ghost: rgba(0,230,118,0.06);
-      --glass: rgba(255,255,255,0.03);
-      --max-width: 1100px;
-      --radius: 12px;
-      --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono", "Segoe UI Mono", monospace;
-    }
-
-    html,body { height:100%; background:var(--bg); color:#fff; font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
-
-    /* subtle container */
-    .wrap { max-width: var(--max-width); margin: 28px auto; padding: 28px; position: relative; z-index: 2; }
-
-    header.site {
-      display:flex;
-      gap: 24px;
-      align-items:center;
-      padding: 22px;
-      border-radius: var(--radius);
-      background: linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.00));
-      border: 1px solid rgba(255,255,255,0.03);
-      margin-bottom: 28px;
-    }
-
-    .profile {
-      min-width:140px;
-      max-width:140px;
-      height:140px;
-      border-radius:50%;
-      overflow:hidden;
-      border: 3px solid var(--lime);
-      flex-shrink:0;
-      background: linear-gradient(180deg,#081010,#050505);
-      display:grid;
-      place-items:center;
-    }
-    .profile img { width:100%; height:100%; object-fit:cover; display:block; }
-
-    .intro {
-      flex:1;
-    }
-    .intro .greet { color:var(--lime); font-weight:700; font-size:1.2rem; margin-bottom:6px; }
-    .intro h1 { font-size:1.45rem; color:#fff; margin-bottom:8px; letter-spacing:0.2px; }
-    .intro p { color:var(--muted); line-height:1.5; max-width:78ch; }
-
-    .actions { margin-top:12px; display:flex; gap:12px; flex-wrap:wrap; }
-    .btn {
-      background:var(--lime);
-      color:#000;
-      padding:10px 14px;
-      border-radius:8px;
-      font-weight:600;
-      text-decoration:none;
-      display:inline-block;
-    }
-    .btn.ghost {
-      background:transparent;
-      color:var(--lime);
-      border:1px solid rgba(0,230,118,0.18);
-    }
-
-    nav.topnav { display:flex; gap:12px; margin-top:14px; flex-wrap:wrap; }
-    nav.topnav a { color:var(--muted); text-decoration:none; padding:6px 8px; border-radius:6px; font-size:0.95rem; }
-    nav.topnav a:hover { color:var(--lime); }
-
-    /* sections */
-    section { padding: 40px 0; }
-    section h2 { color:var(--lime); font-size:1.2rem; margin-bottom:16px; text-align:center; }
-
-    /* Projects grid */
-    .projects-grid {
-      display:grid;
-      gap:18px;
-      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-      margin-top:18px;
-    }
-
-    .card {
-      background: linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.00));
-      border:1px solid rgba(255,255,255,0.03);
-      padding:16px;
-      border-radius:12px;
-      transition: transform .18s ease, box-shadow .18s ease;
-      min-height:120px;
-    }
-    .card:hover { transform: translateY(-6px); box-shadow: 0 10px 30px rgba(0,0,0,0.6), 0 0 14px rgba(0,230,118,0.07); }
-    .card h3 { color:var(--lime); font-size:1rem; margin-bottom:8px; }
-    .card p { color:var(--muted); font-size:0.95rem; line-height:1.4; margin-bottom:10px; }
-    .card a.repo {
-      display:inline-block; margin-top:6px; color:var(--lime); text-decoration:none; font-weight:600; font-size:0.92rem;
-    }
-    .card .small { color:#9a9a9a; font-size:0.82rem; }
-
-    /* contact */
-    .contact-list { display:flex; gap:10px; flex-wrap:wrap; justify-content:center; margin-top:8px; }
-    .social {
-      display:inline-flex; align-items:center; gap:8px; padding:10px 12px; border-radius:10px; text-decoration:none; color:var(--lime); border:1px solid rgba(0,230,118,0.06); font-weight:600;
-      background:var(--glass);
-    }
-    .social small { color:var(--muted); font-weight:400; font-size:0.85rem; }
-
-    footer { text-align:center; color:#666; font-size:0.9rem; margin-top:28px; padding-bottom:40px; }
-
-    /* subtle particles canvas behind everything */
-    canvas#tech-bg { position:fixed; inset:0; width:100%; height:100%; z-index:0; pointer-events:none; }
-
-    /* responsive tweak */
-    @media (max-width:700px){
-      header.site { flex-direction:column; align-items:center; text-align:center; }
-      .intro h1 { font-size:1.15rem; }
-      .intro p { font-size:0.95rem; }
-    }
-  </style>
-</head>
-<body>
-  <canvas id="tech-bg"></canvas>
-
-  <div class="wrap" role="main">
-    <header class="site" role="banner">
-      <div class="profile" aria-hidden="false">
-        <img src="images/about-me.jpg" alt="Profile picture">
-      </div>
-
-      <div class="intro">
-        <div class="greet">Hey there</div>
-        <h1>Welcome — Cybersecurity portfolio</h1>
-        <p>
-          I showcase practical cybersecurity projects and hands-on tools — from detection and analysis to cloud checks and SOC simulations.
-          Each project is designed to demonstrate problem solving, secure-by-design thinking, and the ability to deliver real technical value.
-          I’m pursuing growth in security engineering and operations, and this portfolio collects the work I want teams to evaluate.
-        </p>
-
-        <div class="actions" aria-hidden="false">
-          <a class="btn" href="resume.pdf" target="_blank" rel="noopener">Download CV</a>
-          <a class="btn ghost" href="#projects">View projects</a>
-        </div>
-
-        <nav class="topnav" aria-label="Quick links">
-          <a href="#about">About</a>
-          <a href="#projects">Projects</a>
-          <a href="#contact">Contact</a>
-        </nav>
-      </div>
-    </header>
-
-    <section id="about" aria-labelledby="about-heading">
-      <h2 id="about-heading">About</h2>
-      <p style="color:var(--muted); text-align:center; max-width:880px; margin:0 auto;">
-        I build educational security tooling and lab material — network scanners, SIEM parsers, SOC triage simulations and secure web + backend demos.
-        My work aims to be reproducible, well-documented, and ready to integrate into team pipelines. If you want concise examples and production-minded code, the project pages have notes and usage.
-      </p>
-    </section>
-
-    <section id="projects" aria-labelledby="projects-heading">
-      <h2 id="projects-heading">Selected Projects</h2>
-
-      <div class="projects-grid" role="list">
-
-        <article class="card" role="listitem">
-          <h3>malware-analyzer</h3>
-          <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviours in a controlled environment for learning and demonstration.</p>
-          <a class="repo" href="https://github.com/TanakaShumba/malware-analyzer" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Python • analysis • sandboxed</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>ethical-hacking-sim</h3>
-          <p>Collection of safe, educational scripts simulating port scanning, banner grabbing and basic recon techniques for learning ethical hacking workflows.</p>
-          <a class="repo" href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Python • pentest basics • learning</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>cloud-security-checker</h3>
-          <p>Lightweight tool to check cloud config patterns for common misconfigurations and security hygiene issues (demo scanner + hints).</p>
-          <a class="repo" href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Python • cloud security • best-practices</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>basic-pen-test</h3>
-          <p>Educational penetration testing helpers: scripted checks, port enumerations and report scaffolding for safe lab use.</p>
-          <a class="repo" href="https://github.com/TanakaShumba/basic-pen-test" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Python • audit • lab</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>simple-ids</h3>
-          <p>A basic IDS simulation—demonstrates alert generation, simple signature and anomaly-based detection in Python for teaching.</p>
-          <a class="repo" href="https://github.com/TanakaShumba/simple-ids" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Python • IDS • detection</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>cybersecurity-lab-series</h3>
-          <p>Collection of hands-on labs and exercises that walk students through offensive and defensive tasks with safe, reproducible instructions.</p>
-          <a class="repo" href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Labs • training • scripts</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>secure-hospital-system</h3>
-          <p>Flask-based demo focusing on patient data privacy, access control and secure storage patterns for healthcare applications.</p>
-          <a class="repo" href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Flask • security • web</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>voip-traffic-analyzer</h3>
-          <p>Analyzes RTP packet metadata safely for research and education — sequence numbers, timestamps and payload types (no payload reconstruction).</p>
-          <a class="repo" href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Python • network • RTP</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>python-network-scanner</h3>
-          <p>Simple network scanner for discovering hosts and open ports in lab environments — useful for learning network mapping and security basics.</p>
-          <a class="repo" href="https://github.com/TanakaShumba/python-network-scanner" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Python • networking</div>
-        </article>
-
-        <article class="card" role="listitem">
-          <h3>healthcare-system</h3>
-          <p>Flask-based management system demo for appointments, doctors and payments with notes on secure handling of sensitive data.</p>
-          <a class="repo" href="https://github.com/TanakaShumba/healthcare-system" target="_blank" rel="noopener">Open on GitHub ↗</a>
-          <div class="small">Flask • demo • security</div>
-        </article>
-
-        <!-- add more project cards below using the same pattern if needed -->
-      </div>
-    </section>
-
-    <section id="contact" aria-labelledby="contact-heading">
-      <h2 id="contact-heading">Contact</h2>
-      <div class="contact-list" role="list">
-        <a class="social" href="mailto:tanakashumba04@gmail.com"><strong>Email</strong> <small>tanakashumba04@gmail.com</small></a>
-        <a class="social" href="https://www.linkedin.com/in/tanakashumba-" target="_blank" rel="noopener"><strong>LinkedIn</strong> <small>/in/tanakashumba-</small></a>
-        <a class="social" href="https://www.instagram.com/tanakashumba_/" target="_blank" rel="noopener"><strong>Instagram</strong> <small>@tanakashumba_</small></a>
-        <a class="social" href="https://www.tiktok.com/@tanakashumba" target="_blank" rel="noopener"><strong>TikTok</strong> <small>@tanakashumba</small></a>
-        <a class="social" href="https://twitter.com/Shumba_rumba" target="_blank" rel="noopener"><strong>X</strong> <small>@Shumba_rumba</small></a>
-      </div>
-    </section>
-
-    <footer aria-hidden="false">© 2025 Tanaka Shumba</footer>
-  </div>
-
-  <script>
-    // toned-down particles code (green, minimal, efficient)
-    (function(){
-      const canvas = document.getElementById('tech-bg');
-      const ctx = canvas.getContext('2d');
-      let W = canvas.width = innerWidth;
-      let H = canvas.height = innerHeight;
-      const NUM = Math.round(Math.min(100, W/12));
-      const particles = [];
-      for(let i=0;i<NUM;i++){
-        particles.push({
-          x: Math.random()*W,
-          y: Math.random()*H,
-          r: 0.6 + Math.random()*2.2,
-          vx: (Math.random()-0.5)*0.25,
-          vy: (Math.random()-0.5)*0.25,
-          alpha: 0.15 + Math.random()*0.25
-        });
-      }
-
-      function draw(){
-        ctx.clearRect(0,0,W,H);
-        // faint vignette
-        ctx.fillStyle = 'rgba(0,0,0,0.2)';
-        ctx.fillRect(0,0,W,H);
-
-        for(let p of particles){
-          ctx.beginPath();
-          ctx.fillStyle = `rgba(0,230,118,${p.alpha})`;
-          ctx.arc(p.x, p.y, p.r, 0, Math.PI*2);
-          ctx.fill();
-          p.x += p.vx;
-          p.y += p.vy;
-          if(p.x < -20) p.x = W + 20;
-          if(p.x > W + 20) p.x = -20;
-          if(p.y < -20) p.y = H + 20;
-          if(p.y > H + 20) p.y = -20;
-        }
-        requestAnimationFrame(draw);
-      }
-
-      addEventListener('resize', () => { W = canvas.width = innerWidth; H = canvas.height = innerHeight; });
-      draw();
-    })();
-  </script>
-</body>
-</html>
+[PASTE THE ENTIRE HTML FILE HERE — the same content from above]
