--- a/index.html
+++ b/index.html
@@ -1,131 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tanaka Shumba | Portfolio</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0d0d0d;
-      color: #f5f5f5;
-    }
-    header {
-      text-align: center;
-      padding: 3rem 1rem;
-      background: linear-gradient(135deg, #1e1e1e, #292929);
-    }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    header p {
-      font-size: 1.2rem;
-      color: #bbb;
-    }
-    nav {
-      background: #141414;
-      padding: 0.5rem;
-      text-align: center;
-    }
-    nav a {
-      color: #f5f5f5;
-      margin: 0 1rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      color: #00bcd4;
-    }
-    .section {
-      padding: 3rem 1rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 1.5rem;
-    }
-    .project-card {
-      background: #1a1a1a;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.6);
-      transition: transform 0.2s;
-    }
-    .project-card:hover {
-      transform: translateY(-5px);
-    }
-    .project-card h3 {
-      margin-top: 0;
-    }
-    footer {
-      background: #141414;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-    footer a {
-      color: #00bcd4;
-      text-decoration: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tanaka Shumba | Cybersecurity Portfolio</title>
+    <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: Arial, sans-serif; background-color: #000; color: #fff; overflow-x: hidden; position: relative; }
+        #tech-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
+        header { text-align: center; padding: 50px 20px 30px 20px; }
+        header img { width: 150px; height: 150px; border-radius: 50%; border: 3px solid #00ff00; margin-bottom: 20px; }
+        header h1 { font-size: 2.5em; color: #00ff00; }
+        header p { font-size: 1.1em; margin-top: 10px; color: #ccc; max-width: 700px; margin-left: auto; margin-right: auto; text-align: center; }
+        .cv-link { display: inline-block; padding: 12px 25px; margin-top: 20px; background-color: #00ff00; color: #000; text-decoration: none; border-radius: 5px; font-weight: bold; transition: background-color 0.3s ease; }
+        .cv-link:hover { background-color: #00cc00; }
+        section { padding: 60px 20px; max-width: 1000px; margin: auto; }
+        h2 { color: #00ff00; margin-bottom: 20px; font-size: 2em; text-align: center; }
+        .projects-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
+        .project-card { background-color: #111; border: 2px solid #00ff00; padding: 20px; border-radius: 8px; transition: transform 0.3s ease, box-shadow 0.3s ease; }
+        .project-card:hover { transform: translateY(-5px); box-shadow: 0 0 15px #00ff00; }
+        .project-card h3 { color: #00ff00; margin-bottom: 10px; font-size: 1.2em; }
+        .project-card a { color: #00ff00; text-decoration: none; font-weight: bold; }
+        .project-card a:hover { text-decoration: underline; }
+        #contact { text-align: center; }
+        #contact a { display: inline-block; margin: 10px 15px; color: #00ff00; text-decoration: none; font-weight: bold; border: 2px solid #00ff00; padding: 10px 20px; border-radius: 5px; transition: background-color 0.3s ease, color 0.3s ease; }
+        #contact a:hover { background-color: #00ff00; color: #000; }
+        footer { text-align: center; padding: 30px 20px; color: #555; font-size: 0.9em; }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Tanaka Shumba</h1>
-    <p>Cybersecurity | IT | Developer</p>
-  </header>
+    <canvas id="tech-bg"></canvas>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <header>
+        <img src="images/about-me.jpg" alt="Tanaka Shumba">
+        <h1>Hey there</h1>
+        <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects. Dive in to explore hands-on demos, Python scripts, and practical security tools I've built for learning and professional growth.</p>
+        <a href="resume.pdf" target="_blank" class="cv-link">Download my CV</a>
+    </header>
 
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <p>
-      I am a cybersecurity professional passionate about protecting systems and developing secure solutions.
-      With experience in offensive and defensive techniques, I specialize in threat detection, ethical hacking,
-      and IT support. I enjoy building projects that solve real-world problems and showcase modern security practices.
-    </p>
-  </section>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="projects-container">
+            <div class="project-card"><h3>Malware Analyzer</h3><a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Ethical Hacking Sim</h3><a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Cloud Security Checker</h3><a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Basic Pen Test</h3><a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Simple IDS</h3><a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Cybersecurity Lab Series</h3><a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Secure Hospital System</h3><a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>VoIP Traffic Analyzer</h3><a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Python Network Scanner</h3><a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Healthcare System</h3><a href="https://github.com/TanakaShumba/healthcare-system" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Nmap Threat Model</h3><a href="https://github.com/TanakaShumba/nmap-threat-model" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Security Awareness Mini Course</h3><a href="https://github.com/TanakaShumba/security-awareness-mini-course" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Cloud Misconfig Scanner</h3><a href="https://github.com/TanakaShumba/cloud-misconfig-scanner" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Password Security Demo</h3><a href="https://github.com/TanakaShumba/password-security-demo" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Windows Event Logger Analyzer</h3><a href="https://github.com/TanakaShumba/windows-event-logger-analyzer" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>SOC Alert Triage</h3><a href="https://github.com/TanakaShumba/soc-alert-triage" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>Phishing Email Detector</h3><a href="https://github.com/TanakaShumba/phishing-email-detector" target="_blank">View on GitHub</a></div>
+            <div class="project-card"><h3>SIEM Log Parser</h3><a href="https://github.com/TanakaShumba/siem-log-parser" target="_blank">View on GitHub</a></div>
+        </div>
+    </section>
 
-  <section id="projects" class="section">
-    <h2>Featured Projects</h2>
-    <div class="projects">
-      <div class="project-card">
-        <h3>Python Network Scanner</h3>
-        <p>A tool to scan networks, identify hosts, and detect open ports for security auditing.</p>
-      </div>
-      <div class="project-card">
-        <h3>SIEM Log Parser</h3>
-        <p>Parses SIEM logs to identify and highlight critical security events.</p>
-      </div>
-      <div class="project-card">
-        <h3>Phishing Email Detector</h3>
-        <p>Detects phishing attempts in emails to enhance security awareness training.</p>
-      </div>
-      <div class="project-card">
-        <h3>Healthcare System</h3>
-        <p>A Flask-based secure healthcare management system handling appointments and sensitive data.</p>
-      </div>
-    </div>
-  </section>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <a href="mailto:tanakashumba04@gmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
+        <a href="https://www.instagram.com/tanakashumba_/" target="_blank">Instagram</a>
+        <a href="https://www.tiktok.com/@tanakashumba" target="_blank">TikTok</a>
+        <a href="https://twitter.com/Shumba_rumba" target="_blank">X</a>
+    </section>
 
-  <section id="contact" class="section">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:tanakashumba04@gmail.com">tanakashumba04@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/TanakaShumba" target="_blank">github.com/TanakaShumba</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/tanakashumba-" target="_blank">linkedin.com/in/tanakashumba-</a></p>
-  </section>
+    <footer>© 2025 Tanaka Shumba</footer>
 
-  <footer>
-    <p>&copy; 2025 Tanaka Shumba. Built with ❤️ and secure code.</p>
-  </footer>
+    <script>
+        const canvas = document.getElementById('tech-bg');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        let particles = [];
+        for (let i = 0; i < 50; i++) {
+            particles.push({ x: Math.random() * canvas.width, y: Math.random() * canvas.height, vx: (Math.random() - 0.5) * 0.5, vy: (Math.random() - 0.5) * 0.5, size: Math.random() * 2 + 1 });
+        }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = 'lime';
+            particles.forEach(p => { ctx.beginPath(); ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2); ctx.fill(); p.x += p.vx; p.y += p.vy; if(p.x<0||p.x>canvas.width)p.vx*=-1;if(p.y<0||p.y>canvas.height)p.vy*=-1; });
+            requestAnimationFrame(animate);
+        }
+        animate();
+        window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; });
+    </script>
 </body>
 </html>
