--- a/index.html
+++ b/index.html
@@ -6,26 +6,153 @@
     <title>Tanaka Shumba | Cybersecurity Portfolio</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: Arial, sans-serif; background-color: #000; color: #fff; overflow-x: hidden; position: relative; }
-        #tech-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
-        header { text-align: center; padding: 50px 20px 30px 20px; }
-        header img { width: 150px; height: 150px; border-radius: 50%; border: 3px solid #00ff00; margin-bottom: 20px; }
-        header h1 { font-size: 2.5em; color: #00ff00; }
-        header p { font-size: 1.1em; margin-top: 10px; color: #ccc; max-width: 700px; margin-left: auto; margin-right: auto; text-align: center; }
-        .cv-link { display: inline-block; padding: 12px 25px; margin-top: 20px; background-color: #00ff00; color: #000; text-decoration: none; border-radius: 5px; font-weight: bold; transition: background-color 0.3s ease; }
-        .cv-link:hover { background-color: #00cc00; }
-        section { padding: 60px 20px; max-width: 1000px; margin: auto; }
-        h2 { color: #00ff00; margin-bottom: 20px; font-size: 2em; text-align: center; }
-        .projects-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
-        .project-card { background-color: #111; border: 2px solid #00ff00; padding: 20px; border-radius: 8px; transition: transform 0.3s ease, box-shadow 0.3s ease; }
-        .project-card:hover { transform: translateY(-5px); box-shadow: 0 0 15px #00ff00; }
-        .project-card h3 { color: #00ff00; margin-bottom: 10px; font-size: 1.2em; }
-        .project-card a { color: #00ff00; text-decoration: none; font-weight: bold; }
-        .project-card a:hover { text-decoration: underline; }
-        #contact { text-align: center; }
-        #contact a { display: inline-block; margin: 10px 15px; color: #00ff00; text-decoration: none; font-weight: bold; border: 2px solid #00ff00; padding: 10px 20px; border-radius: 5px; transition: background-color 0.3s ease, color 0.3s ease; }
-        #contact a:hover { background-color: #00ff00; color: #000; }
-        footer { text-align: center; padding: 30px 20px; color: #555; font-size: 0.9em; }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #000;
+            color: #fff;
+            overflow-x: hidden;
+            position: relative;
+        }
+
+        #tech-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+        header {
+            text-align: center;
+            padding: 50px 20px 30px 20px;
+        }
+
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 3px solid #00ff00;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 2.5em;
+            color: #00ff00;
+        }
+
+        header p {
+            font-size: 1.1em;
+            margin-top: 10px;
+            color: #ccc;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .cv-link {
+            display: inline-block;
+            padding: 12px 25px;
+            margin-top: 20px;
+            background-color: #00ff00;
+            color: #000;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        .cv-link:hover {
+            background-color: #00cc00;
+        }
+
+        section {
+            padding: 60px 20px;
+            max-width: 1000px;
+            margin: auto;
+        }
+
+        h2 {
+            color: #00ff00;
+            margin-bottom: 20px;
+            font-size: 2em;
+            text-align: center;
+        }
+
+        #about p {
+            line-height: 1.6;
+            font-size: 1.1em;
+            color: #ccc;
+            text-align: center;
+            max-width: 800px;
+            margin: auto;
+        }
+
+        .projects-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .project-card {
+            background-color: #111;
+            border: 2px solid #00ff00;
+            padding: 20px;
+            border-radius: 8px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-align: center;
+        }
+
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0 15px #00ff00;
+        }
+
+        .project-card h3 {
+            color: #00ff00;
+            margin-bottom: 10px;
+            font-size: 1.2em;
+        }
+
+        .project-card a {
+            color: #00ff00;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .project-card a:hover {
+            text-decoration: underline;
+        }
+
+        #contact {
+            text-align: center;
+        }
+
+        #contact a {
+            display: inline-block;
+            margin: 10px 15px;
+            color: #00ff00;
+            text-decoration: none;
+            font-weight: bold;
+            border: 2px solid #00ff00;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        #contact a:hover {
+            background-color: #00ff00;
+            color: #000;
+        }
+
+        footer {
+            text-align: center;
+            padding: 30px 20px;
+            color: #555;
+            font-size: 0.9em;
+        }
+
     </style>
 </head>
 <body>
@@ -34,31 +161,13 @@
     <header>
         <img src="images/about-me.jpg" alt="Tanaka Shumba">
         <h1>Hey there</h1>
-        <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects. Dive in to explore hands-on demos, Python scripts, and practical security tools I've built for learning and professional growth.</p>
+        <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Beyond my projects, I am passionate about advancing in the cybersecurity field and contributing to securing digital landscapes.</p>
         <a href="resume.pdf" target="_blank" class="cv-link">Download my CV</a>
     </header>
 
     <section id="projects">
         <h2>My Projects</h2>
-        <div class="projects-container">
-            <div class="project-card"><h3>Malware Analyzer</h3><a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Ethical Hacking Sim</h3><a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Cloud Security Checker</h3><a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Basic Pen Test</h3><a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Simple IDS</h3><a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Cybersecurity Lab Series</h3><a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Secure Hospital System</h3><a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>VoIP Traffic Analyzer</h3><a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Python Network Scanner</h3><a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Healthcare System</h3><a href="https://github.com/TanakaShumba/healthcare-system" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Nmap Threat Model</h3><a href="https://github.com/TanakaShumba/nmap-threat-model" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Security Awareness Mini Course</h3><a href="https://github.com/TanakaShumba/security-awareness-mini-course" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Cloud Misconfig Scanner</h3><a href="https://github.com/TanakaShumba/cloud-misconfig-scanner" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Password Security Demo</h3><a href="https://github.com/TanakaShumba/password-security-demo" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Windows Event Logger Analyzer</h3><a href="https://github.com/TanakaShumba/windows-event-logger-analyzer" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>SOC Alert Triage</h3><a href="https://github.com/TanakaShumba/soc-alert-triage" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>Phishing Email Detector</h3><a href="https://github.com/TanakaShumba/phishing-email-detector" target="_blank">View on GitHub</a></div>
-            <div class="project-card"><h3>SIEM Log Parser</h3><a href="https://github.com/TanakaShumba/siem-log-parser" target="_blank">View on GitHub</a></div>
+        <div class="projects-container" id="projects-container">
         </div>
     </section>
 
@@ -71,7 +180,9 @@
         <a href="https://twitter.com/Shumba_rumba" target="_blank">X</a>
     </section>
 
-    <footer>© 2025 Tanaka Shumba</footer>
+    <footer>
+        © 2025 Tanaka Shumba
+    </footer>
 
     <script>
         const canvas = document.getElementById('tech-bg');
@@ -81,17 +192,54 @@
 
         let particles = [];
         for (let i = 0; i < 50; i++) {
-            particles.push({ x: Math.random() * canvas.width, y: Math.random() * canvas.height, vx: (Math.random() - 0.5) * 0.5, vy: (Math.random() - 0.5) * 0.5, size: Math.random() * 2 + 1 });
+            particles.push({
+                x: Math.random() * canvas.width,
+                y: Math.random() * canvas.height,
+                vx: (Math.random() - 0.5) * 0.5,
+                vy: (Math.random() - 0.5) * 0.5,
+                size: Math.random() * 2 + 1
+            });
         }
 
         function animate() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             ctx.fillStyle = 'lime';
-            particles.forEach(p => { ctx.beginPath(); ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2); ctx.fill(); p.x += p.vx; p.y += p.vy; if(p.x<0||p.x>canvas.width)p.vx*=-1;if(p.y<0||p.y>canvas.height)p.vy*=-1; });
+            particles.forEach(p => {
+                ctx.beginPath();
+                ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+                ctx.fill();
+                p.x += p.vx;
+                p.y += p.vy;
+                if (p.x < 0 || p.x > canvas.width) p.vx *= -1;
+                if (p.y < 0 || p.y > canvas.height) p.vy *= -1;
+            });
             requestAnimationFrame(animate);
         }
         animate();
-        window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; });
+
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        });
+
+        // Fetch GitHub repos and display projects (exclude portfolio repo, no description)
+        const container = document.getElementById('projects-container');
+        fetch('https://api.github.com/users/TanakaShumba/repos?sort=updated&per_page=100')
+        .then(res => res.json())
+        .then(repos => {
+            repos
+            .filter(repo => repo.name.toLowerCase() !== 'tanakashumba.github.io')
+            .forEach(repo => {
+                const card = document.createElement('div');
+                card.className = 'project-card';
+                card.innerHTML = `
+                    <h3>${repo.name}</h3>
+                    <a href="${repo.html_url}" target="_blank">View on GitHub</a>
+                `;
+                container.appendChild(card);
+            });
+        })
+        .catch(err => console.error('Error fetching repos:', err));
     </script>
 </body>
 </html>
